<resources>
    <string name="app_name">Locked App</string>

    <string name="drawer_menu_home">Home</string>
    <string name="drawer_menu_help">Help</string>
    <string name="drawer_menu_feedback">Feedback</string>
    <string name="drawer_menu_logout">Logout</string>
    <string name="drawer_menu_report_bug">Report Bug</string>
    <string name="drawer_menu_tracking">Tracking</string>
    <string name="drawer_menu_chat">Chat</string>
    <string name="drawer_menu_triggers">Triggers</string>

    <string name="profilePicture">Profile Picture</string>
    <string name="person_name">Test User</string>
    <string name="person_email">testuser@gmail.com</string>
    <string name="member_status">Active Member</string>
    <string name="action_members">Members</string>
    <string name="title_members">Members</string>
    <string name="title_main">Locked</string>

    <string name="pref_sync_summ">Stuff</string>
    <string name="pref_sync">More stuff</string>

    <string name="options_menu_settings">Settings</string>
    <string name="options_menu_search">Search</string>


</resources>
